Added in MathJax

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -12,6 +12,17 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script type="text/x-mathjax-config">
+      MathJax.Hub.Config({
+      tex2jax: {
+      inlineMath: [["$","$"],["\\(","\\)"]],
+      displayMath:[["$$", "$$"], ["\\[","\\]"]]
+      },
+      showMathMenu: false,
+      messageStyle: "none"
+      });
+      </script>
+      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
