--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -12,17 +12,33 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <script type="text/x-mathjax-config">
-      MathJax.Hub.Config({
-      tex2jax: {
-      inlineMath: [["$","$"],["\\(","\\)"]],
-      displayMath:[["$$", "$$"], ["\\[","\\]"]]
-      },
-      showMathMenu: false,
-      messageStyle: "none"
-      });
-      </script>
-      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+    <script>
+      MathJax = {
+        loader: { load: ["[tex]/amscd"] },
+        tex: {
+          packages: { "[+]": ["amscd"] },
+          inlineMath: [
+            ["$", "$"],
+            ["\\(", "\\)"],
+          ],
+          amscd: {
+            colspace: "5pt",
+            rowspace: "5pt",
+            harrowsize: "2.75em",
+            varrowsize: "1.75em",
+            hideHorizontalLabels: false,
+          },
+        },
+        chtml: {
+          scale: 1.2,
+        },
+      };
+    </script>
+    <script
+      id="MathJax-script"
+      async
+      src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"
+    ></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
